Closed
Bug 1613011
Opened 5 years ago
Closed 5 years ago
Assertion failure: !mLink.Left() && !mLink.Right() (Arena is still registered), at /tmp/gecko/memory/build/mozjemalloc.cpp:3575
Categories
(Core :: Memory Allocator, defect)
Core
Memory Allocator
Tracking
()
RESOLVED
FIXED
mozilla74
| Tracking | Status | |
|---|---|---|
| firefox74 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
References
Details
Attachments
(1 file)
This can pseudo-randomly happen when calling moz_dispose_arena after bug 1610720.
| Assignee | ||
Comment 1•5 years ago
|
||
The assert that was added in bug 1610720 assumed the node links were
reset when a node is removed from a RedBlackTree, but that wasn't the
case. We can either remove the assert, or clear node links. We pick the
latter.
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/db2720efb1a5
Clear node links when removing it from a RedBlackTree. r=njn
Comment 3•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox74:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
You need to log in
before you can comment on or make changes to this bug.
Description
•